[project]
name = "api-samnilabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[deepgram,openai,runner,silero,webrtc]>=0.0.102",
    "fastapi>=0.115.6,<0.128.0",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.1",
    "boto3>=1.35.0",
]
